Only show posts that users have access to on tags pages.

--- a/tag.hbs
+++ b/tag.hbs
@@ -42,10 +42,7 @@
         </section>
         {{/tag}}
 
-        {{#foreach posts}}
-            {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-            {{> "post-card"}}
-        {{/foreach}}
+        {{> "posts-visibility"}}
 
     </div>
 
