--- a/index.hbs
+++ b/index.hbs
@@ -42,17 +42,7 @@ into the {body} of the default.hbs template --}}
 <div class="inner posts">
 
     <div class="post-feed">
-        {{#if @member}}
-            {{#foreach posts}}
-                {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-                {{> "post-card"}}
-            {{/foreach}}
-        {{else}}
-            {{#foreach posts visibility="public"}}
-                {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-                {{> "post-card"}}
-            {{/foreach}}
-        {{/if}}
+        {{> "posts-visibility"}}
     </div>
 
     {{pagination}}
