--- a/default.hbs
+++ b/default.hbs
@@ -87,6 +87,7 @@
             <nav class="site-footer-nav">
                 {{navigation type="secondary"}}
             </nav>
+            {{{block "edit-link"}}}
         </div>
     </footer>
 
