--- a/page.hbs
+++ b/page.hbs
@@ -43,4 +43,7 @@ into the {body} tag of the default.hbs template --}}
 </article>
 </main>
 
+{{#contentFor "edit-link"}}
+<a href="/ghost/#/editor/page/{{id}}">Edit</a>
+{{/contentFor}}
 {{/post}}
