--- a/assets/css/supersprinkles.css
+++ b/assets/css/supersprinkles.css
@@ -20,3 +20,40 @@
 .gh-head-menu .nav-slack a::before {content: "\f198"}
 
 /* --- End --- */
+
+/* Two columns: https://devpractical.com/two-column-layout-html-css/#:~:text=2.%20Create%20Sidebar%20Layout%3A%20Two%20column%20layout */
+.columns {
+    Width: 100%;
+}
+
+.column-1 {
+    width: 70%;
+    float: left;
+}
+
+.column-2 {
+    width: 30%;
+    float: left;
+    padding: 0 max(4vmin, 20px)
+}
+
+.columns {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media (max-width: 1200px) {
+    .column-1 {
+        width: 100%;
+    }
+    .column-2 {
+        display: none;
+    }
+}
+
+.sidebar .segment {
+    padding-bottom: 2em;
+}
+
+/* --- End --- */
