--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -8,3 +8,6 @@
 <div class="segment">
     <iframe height='240' width='100%' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.crossresults.com/widget.php?teamid=70378&h=240&speed=9' ></iframe>
 </div>
+<div class="segment">
+    <iframe allowtransparency frameborder='0' width="100%" height='454' scrolling='no' src='https://www.strava.com/clubs/1035226/latest-rides/3f44eff6c8cb83b16be2018ce9a47dc448ddfe0a?show_rides=true'></iframe>
+</div>
