--- a/assets/css/supersprinkles.css
+++ b/assets/css/supersprinkles.css
@@ -57,3 +57,10 @@
 }
 
 /* --- End --- */
+
+/* Scrim the menu for the main page header. */
+#gh-head {
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(3px);
+}
+/* --- End --- */
