hack to make the burger light on dark backgorunds in dark mode

--- a/assets/css/supersprinkles.css
+++ b/assets/css/supersprinkles.css
@@ -64,3 +64,13 @@
     backdrop-filter: blur(3px);
 }
 /* --- End --- */
+
+/** Hack to make the menu burger icon white on dark backgrounds. */
+@media (prefers-color-scheme: dark) {
+    .has-cover .gh-burger::before,
+    .has-cover .gh-burger::after {
+        color: gray;
+        background-color: gray;
+    }
+}
+/* --- End --- */
