--- a/default.hbs
+++ b/default.hbs
@@ -22,7 +22,7 @@
     {{!-- Social Media Icons: https://ghost.org/tutorials/add-social-media-icons/?_ga=2.68909970.2077309190.1688546231-1313046584.1688546231 --}}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-	<!-- Analytics -->
+        <!-- Analytics -->
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6BH5S1MDEG"></script>
     <script>
@@ -31,16 +31,16 @@
         gtag('js', new Date());
         gtag('config', 'G-6BH5S1MDEG');
     </script>
-	<!-- Ads -->
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16484854429"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	
-	  gtag('config', 'AW-16484854429');
-	</script>
+        <!-- Ads -->
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16484854429"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'AW-16484854429');
+        </script>
 
     {{!-- This tag outputs all your advanced SEO meta, structured data, and other important settings,
     it should always be the last tag before the closing head tag --}}
@@ -66,15 +66,15 @@
 
             <nav class="gh-head-menu">
                 {{navigation}}
-                {{#unless @site.members_enabled}}
-                    {{#match @custom.navigation_layout "Stacked"}}
-                        <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
-                    {{/match}}
-                {{/unless}}
+                {{#match @custom.navigation_layout "Stacked"}}
+                    <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
+                {{/match}}
             </nav>
 
             <div class="gh-head-actions">
-                <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
+                {{^match @custom.navigation_layout "Stacked"}}
+                    <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
+                {{/match}}
             </div>
         </div>
     </header>
@@ -121,7 +121,7 @@
                 {{!-- All other templates get inserted here, index.hbs, post.hbs, etc --}}
                 <main id="site-main" class="site-main">
                 {{{body}}}
-		</main>
+                </main>
            </div>
            <div class="column column-2">
                 {{> "sidebar"}}
@@ -148,17 +148,20 @@
 {{/is}}
 
 {{!-- Scripts - handle member signups, responsive videos, infinite scroll, floating headers, and galleries --}}
+<script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous">
+</script>
 <script src="{{asset "built/casper.js"}}"></script>
 <script>
-document.addEventListener('DOMContentLoaded', function () {
+$(document).ready(function () {
     // Mobile Menu Trigger
-    const burger = document.querySelector('.gh-burger');
-    if (burger) {
-        burger.addEventListener('click', function () {
-            document.body.classList.toggle('gh-head-open');
-        });
-    }
-    // FitVids functionality is now handled by CSS in supersprinkles.css
+    $('.gh-burger').click(function () {
+        $('body').toggleClass('gh-head-open');
+    });
+    // FitVids - Makes video embeds responsive
+    $(".gh-content").fitVids();
 });
 </script>
 
