--- a/post.hbs
+++ b/post.hbs
@@ -21,11 +21,11 @@ into the {body} tag of the default.hbs template --}}
             {{/if}}
         </div>
 
-        <h1 class="article-title">{{title}}</h1>
+        <!-- <h1 class="article-title">{{title}}</h1> -->
 
-        {{#if custom_excerpt}}
+        <!-- {{#if custom_excerpt}}
             <p class="article-excerpt">{{custom_excerpt}}</p>
-        {{/if}}
+        {{/if}} -->
 
         <div class="article-byline">
         <section class="article-byline-content">
